sdk_tests/tests/create-type-spec-macro-fail/only_structs_with_named_fields_allowed.rs
#![no_main]
use create_type_spec_derive::CreateTypeSpec;

#[derive(CreateTypeSpec)]
struct MyUnitStruct;